[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Bakery/bakery_BG.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DoorArea.gd" type="Script" id=2]
[ext_resource path="res://Resources/Bakery/bakery_open_door_-_hover_state_BG.png" type="Texture" id=3]
[ext_resource path="res://Scenes/3Dots.tscn" type="PackedScene" id=5]

[node name="InsideBackeryScene" type="Node2D"]

[node name="BGCanvasLayer" type="CanvasLayer" parent="."]

[node name="Bakery" type="TextureRect" parent="BGCanvasLayer"]
margin_right = 1200.0
margin_bottom = 900.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bakery2" type="TextureRect" parent="BGCanvasLayer"]
visible = false
margin_right = 1200.0
margin_bottom = 900.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorHighlight" type="Polygon2D" parent="BGCanvasLayer"]
visible = false
light_mask = 0
position = Vector2( 14.765, -13.8261 )
scale = Vector2( 1.115, 1.24275 )
color = Color( 0.509804, 0.494118, 0.494118, 0.729412 )
polygon = PoolVector2Array( 525.771, 233.214, 593.036, 267.01, 593.036, 411.85, 525.771, 378.054 )

[node name="3Dots" parent="BGCanvasLayer" instance=ExtResource( 5 )]
anchor_left = 0.885
anchor_right = 0.885
anchor_bottom = 0.145

[node name="DoorArea" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="DoorCollisionBody" type="CollisionPolygon2D" parent="DoorArea"]
polygon = PoolVector2Array( 599, 273, 677, 318, 676, 498, 601, 453 )

[connection signal="input_event" from="DoorArea" to="DoorArea" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="DoorArea" to="DoorArea" method="_on_DoorArea_mouse_entered"]
[connection signal="mouse_exited" from="DoorArea" to="DoorArea" method="_on_DoorArea_mouse_exited"]
